--- a/sources/HeuristicLab.Problems.DataAnalysis/3.4/HeuristicLab.Problems.DataAnalysis-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.4/HeuristicLab.Problems.DataAnalysis-3.4.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Interfaces\Clustering\IClusteringProblem.cs" />
     <Compile Include="Interfaces\Clustering\IClusteringProblemData.cs" />
     <Compile Include="Interfaces\Clustering\IClusteringSolution.cs" />
-    <Compile Include="OnlineEvaluators\OnlineAccuracyEvaluator.cs" />
+    <Compile Include="OnlineEvaluators\OnlineAccuracyCalculator.cs" />
     <Compile Include="Implementation\Regression\RegressionProblemData.cs" />
     <Compile Include="Implementation\DataAnalysisProblemData.cs" />
     <Compile Include="Implementation\Regression\RegressionProblem.cs" />
@@ -141,17 +141,17 @@
     <Compile Include="Interfaces\Classification\IClassificationSolution.cs" />
     <Compile Include="Interfaces\IDataAnalysisProblemData.cs" />
     <Compile Include="Interfaces\IDataAnalysisSolution.cs" />
-    <Compile Include="Interfaces\IOnlineEvaluator.cs" />
+    <Compile Include="Interfaces\IOnlineCalculator.cs" />
     <Compile Include="Interfaces\Regression\IRegressionModel.cs" />
     <Compile Include="Interfaces\Regression\IRegressionProblem.cs" />
     <Compile Include="Interfaces\Regression\IRegressionProblemData.cs" />
     <Compile Include="Interfaces\Regression\IRegressionSolution.cs" />
-    <Compile Include="OnlineEvaluators\OnlineCovarianceEvaluator.cs" />
-    <Compile Include="OnlineEvaluators\OnlineMeanAbsolutePercentageErrorEvaluator.cs" />
+    <Compile Include="OnlineEvaluators\OnlineCovarianceCalcualtor.cs" />
+    <Compile Include="OnlineEvaluators\OnlineMeanAbsolutePercentageErrorCalculator.cs" />
     <Compile Include="OnlineEvaluators\OnlineMeanAndVarianceCalculator.cs" />
-    <Compile Include="OnlineEvaluators\OnlineMeanSquaredErrorEvaluator.cs" />
-    <Compile Include="OnlineEvaluators\OnlineNormalizedMeanSquaredErrorEvaluator.cs" />
-    <Compile Include="OnlineEvaluators\OnlinePearsonsRSquaredEvaluator.cs" />
+    <Compile Include="OnlineEvaluators\OnlineMeanSquaredErrorCalculator.cs" />
+    <Compile Include="OnlineEvaluators\OnlineNormalizedMeanSquaredErrorCalculator.cs" />
+    <Compile Include="OnlineEvaluators\OnlinePearsonsRSquaredCalculator.cs" />
     <Compile Include="Implementation\Regression\RegressionSolution.cs" />
     <Compile Include="TableFileParser.cs" />
     <Compile Include="Implementation\Classification\ThresholdCalculators\AccuracyMaximizationThresholdCalculator.cs" />
