--- a/sources/HeuristicLab.PluginInfrastructure/3.3/HeuristicLab.PluginInfrastructure-3.3.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/3.3/HeuristicLab.PluginInfrastructure-3.3.csproj
@@ -220,6 +220,12 @@
     <Compile Include="BaseClasses\ApplicationBase.cs" />
     <Compile Include="BaseClasses\PluginBase.cs" />
     <Compile Include="DefaultApplicationManager.cs" />
+    <Compile Include="ErrorHandling\FrameworkVersionWarning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ErrorHandling\FrameworkVersionWarning.Designer.cs">
+      <DependentUpon>FrameworkVersionWarning.cs</DependentUpon>
+    </Compile>
     <Compile Include="ErrorHandling\ErrorDialog.cs">
       <SubType>Form</SubType>
     </Compile>
